Add verbose pipeline parameter to output each processor's execution details
Signed-off-by: Junwei Dai <junweid@amazon.com>